--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
-version: '3.1'
+version: '3'
+
 services:
-  web:
+  # odoo:
+  web_dev:
     image: odoo:16.0
     depends_on:
-      - mydb
+      - mydb_dev
+    volumes:
+      - ./extra-addons:/mnt/extra-addons
     ports:
       - "8069:8069"
     environment:
-      - HOST=mydb
+      - HOST=mydb_dev # same name as the postgres service
       - USER=odoo
-      - PASSWORD=myodoo
-  mydb:
-    image: postgres:15
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_PASSWORD=myodoo
-      - POSTGRES_USER=odoo
-    ports:
-      - "5432:5432"
+      - PASSWORD=odoo
